force-app/main/default/objects/Assessments__c/Assessments__c.object-meta.xml
<CustomObject>
    <description>Penalty Assessment, Wage Assessments, Non-Citable Violations, Stop Orders, Notice To Discontinues are all stored in this object, which is tied to a Violation.</description>
    <label>Assessment</label>
    <nameField>
        <displayFormat>AST-{000000}</displayFormat>
        <label>Assessments ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>