force-app/main/default/objects/Assessments__c/fields/Appeal_Deadline_Days__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Deadline_Days__c</fullName>
    <description>Set as max of appeal deadline from child case violation records via trigger on case violation object</description>
    <label>Appeal Deadline (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>