force-app/main/default/objects/Assessments__c/fields/Assessment_Paid__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Paid__c</fullName>
    <description>Total_Citation_Penalties_Balance_Due__c &lt;= 0</description>
    <formula>Total_Citation_Penalties_Balance_Due__c &lt;= 0 
&amp;&amp;  Total_Wages_Balance_Due__c &lt;= 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Paid</label>
    <type>Checkbox</type>
</CustomField>