force-app/main/default/objects/Assessments__c/fields/Audit_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_End_Date__c</fullName>
    <description>Used for Conga Documents</description>
    <label>Audit End Date</label>
    <type>Date</type>
</CustomField>