force-app/main/default/objects/Assessments__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <description>The case is a parent of the assessment. This field specifies the case for which the assessment is a child.</description>
    <inlineHelpText>The case is a parent of the assessment. This field specifies the case for which the assessment is a child.</inlineHelpText>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>