force-app/main/default/objects/Assessments__c/fields/Citation_Number__c.field-meta.xml
<CustomField>
    <fullName>Citation_Number__c</fullName>
    <description>DLRS to bring in the citation number from the liability object(s)</description>
    <label>Citation Numbers</label>
    <length>58</length>
    <type>Text</type>
</CustomField>