force-app/main/default/objects/Assessments__c/fields/Current_Citation_Principle__c.field-meta.xml
<CustomField>
    <fullName>Current_Citation_Principle__c</fullName>
    <label>Current Citation Principle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>