force-app/main/default/objects/Assessments__c/fields/Current_Period_Interest_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Current_Period_Interest_Assessed__c</fullName>
    <label>Current Period Interest Assessed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>