force-app/main/default/objects/Assessments__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>This field will store the Industry from the Case Issues for some Violation Types</description>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>