force-app/main/default/objects/Assessments__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>