force-app/main/default/objects/Assessments__c/fields/Language_Spoken__c.field-meta.xml
<CustomField>
    <fullName>Language_Spoken__c</fullName>
    <description>Used for Conga Documents</description>
    <label>Language Spoken</label>
    <length>80</length>
    <type>Text</type>
</CustomField>