force-app/main/default/objects/Assessments__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Holds the ID from the record in the system that this was imported from</description>
    <label>Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>