force-app/main/default/objects/Assessments__c/fields/Location_State__c.field-meta.xml
<CustomField>
    <fullName>Location_State__c</fullName>
    <formula>TEXT(Location__r.State__c)</formula>
    <label>Location - State</label>
    <type>Text</type>
</CustomField>