force-app/main/default/objects/Assessments__c/fields/Location_Street__c.field-meta.xml
<CustomField>
    <fullName>Location_Street__c</fullName>
    <formula>Location__r.Address__c</formula>
    <label>Location - Street</label>
    <type>Text</type>
</CustomField>