force-app/main/default/objects/Assessments__c/fields/of_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_Employees__c</fullName>
    <label># of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>