force-app/main/default/objects/Assessments__c/fields/Penalt__c.field-meta.xml
<CustomField>
    <fullName>Penalt__c</fullName>
    <label>Penalties Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>