force-app/main/default/objects/Assessments__c/fields/Referred_to_CIU__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_CIU__c</fullName>
    <label>Referred to CIU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>