force-app/main/default/objects/Assessments__c/fields/Total_Citation_Penalties_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Citation_Penalties_Balance_Due__c</fullName>
    <description>Total_Citation_Penalties_Assessed__c -  Total_Citation_Penalties_Paid__c</description>
    <formula>Total_Citation_Penalties_Assessed__c - Total_Citations_Penalties_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total_Citation_Penalties_Assessed__c -  Total_Citation_Penalties_Paid__c</inlineHelpText>
    <label>Total Citation Penalties Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>