force-app/main/default/objects/Assessments__c/fields/Total_Interest_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Assessed__c</fullName>
    <description>Interest assessed on the violations</description>
    <inlineHelpText>Total of interest assessed on the violations</inlineHelpText>
    <label>Total Interest Assessed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>