force-app/main/default/objects/Assessments__c/fields/Total_Interest_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Balance_Due__c</fullName>
    <formula>Total_Interest_Assessed__c -  Total_Interest_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>