force-app/main/default/objects/Assessments__c/fields/Total_Penalties_and_Wages_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Penalties_and_Wages_Paid__c</fullName>
    <description>This field calculates the total of Penalties and Wages paid.</description>
    <formula>Total_Citations_Penalties_Paid__c +  Wages_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Penalties and Wages Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>