force-app/main/default/objects/Assessments__c/fields/Total_Wages_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Total_Wages_Assessed__c</fullName>
    <label>Total Wages Assessed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>