force-app/main/default/objects/Assessments__c/fields/Total_Wages_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Wages_Balance_Due__c</fullName>
    <description>Total_Wages_Assessed__c - Total_Wages_Paid__c</description>
    <formula>Total_Wages_Assessed__c - Total_Wages_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total_Wages_Assessed__c - Total_Wages_Paid__c</inlineHelpText>
    <label>Total Wages Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>