force-app/main/default/objects/Assessments__c/recordTypes/BOFE_Assessments.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Assessments</fullName>
    <active>true</active>
    <description>Assessments on BOFE cases</description>
    <label>BOFE Assessments</label>
</RecordType>